added css and welcome

--- a/she_innovates/Views/Home/Index.cshtml
+++ b/she_innovates/Views/Home/Index.cshtml
@@ -4,6 +4,15 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-
+	<p> Gain access to our website<a href="https://SheInnovates.com"> SheInnovates </a></p>
+<a href="https://SheInnovates.com">
+        <img src="https://media.istockphoto.com/id/1296144988/vector/five-women-of-different-ethnicities-and-cultures-stand-side-by-side-together-strong-and.jpg?s=612x612&w=0&k=20&c=oW4ckSdunLL1IHO8UY_H4eUxCZPaIFUT8vf_32F1yNw=" alt="Image Description">
+    </a>
+    </div>
+    <h1><p align="center">Purpose</p></h1>
+    <p align="center"> SheInnovates Connect is a dedicated platform that aims to empower and support women in STEM fields. Our app fosters a vibrant community where women can network, seek mentorship, and collaborate with like-minded professionals. 
+        By facilitating meaningful connections between aspiring talent and experienced mentors, SheInnovates strives to break barriers, inspire innovation, and create a more inclusive and diverse landscape within the STEM industry. 
+        Together, we empower women to achieve their full potential and make a lasting impact on the world of technology and beyond.
+    </p>
+    <h1><p align="center">Objectives</p></h1>
+    <p align="center">Our objective is to create a supportive and inclusive community platform that connects women in STEM fields, providing them with opportunities to network, find mentors, and access resources</p>
