--- a/she_innovates/Views/Home/Privacy.cshtml
+++ b/she_innovates/Views/Home/Privacy.cshtml
@@ -3,5 +3,42 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p align="justified">
+  <h4>Welcome to SheInnovates</h4><br/>
+   <strong>Last updated: [06 August 2023]</strong><br/>
+  We are committed to protecting your privacy and providing a safe and secure experience while using our app.
+  This Privacy Policy outlines how we collect, use, disclose, and protect your personal information. By using our app, you agree to the terms of this Privacy Policy.<br /><br />
 
+  <strong>Information We Collect</strong><br/>
+  <ul>
+  <li>Personal Information: When you sign up for SheInnovates, we may collect personal information such as your name, email address, and profile picture. We may also collect other information you provide to us voluntarily, such as age, location, and interests.<br/></li>
+  <li>Usage Data:We may collect data on how you interact with the app, including your app usage, interactions, and preferences.<br /></li>
+  <li>Cookies and Similar Technologies: We may use cookies and similar technologies to collect information about your device and usage patterns. You can manage your cookie preferences through your device settings.<br/></li>
+  </ul>
+  <br/>
+
+  <strong>How We Use Your Information</strong><br/>
+  <ul>
+  <li>Personalization: We may use your information to personalize your experience with our app, including showing you relevant content and recommendations.<br /></li>
+  <li>Communication: We may use your contact information to communicate with you about app updates, news, and promotions.<br /></li>
+  <li>Analytics: We may use your information to analyze app usage and improve our services.<br/></li>
+</ul>
+<br/>
+
+  <strong>Disclosure of Your Information</strong><br/>
+  - We do not sell, trade, or rent your personal information to third parties.<br/>
+  - We may share your information with service providers who assist us in providing the app and its services. These service providers are contractually obligated to keep your information confidential.<br />
+  - We may disclose your information when required by law or to protect our rights and safety or the rights and safety of others.<br /><br />
+
+  <strong>Data Security</strong><br/>
+  We implement security measures to protect your personal information from unauthorized access and use. However, no data transmission over the internet or electronic storage method is 100% secure. While we strive to protect your information, we cannot guarantee its absolute security.<br/>
+
+  <strong>Children's and Men Privacy</strong><br />
+  SheInnovates is not intended for children under the age of 13 or any males.If we learn that we have collected personal information from a child under 13 or a male, we will take appropriate steps to delete the information as soon as possible.<br />
+
+  <strong>Your Choice</strong><br/>
+  You can review and update your personal information by accessing your account settings within the app.<br /><br />
+
+  <strong>Changes to this Privacy Policy</strong><br /><br />
+  We may update this Privacy Policy from time to time. The most current version will be posted on our app, and the date of the latest revision will be indicated at the top of this page. We encourage you to review the Privacy Policy periodically to stay informed about how we collect, use, and protect your information.
+</p>
