--- a/she_innovates/wwwroot/css/site.css
+++ b/she_innovates/wwwroot/css/site.css
@@ -1,22 +1,36 @@
 ﻿html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+       
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #e650b0;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+   
 }
-
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+h1,h2,h3 {
+    color: #b199b8;
+    
+}
+a {
+    color: #bc62f4;
+}
+#registerSubmit {
+    background-color: #c981f6;
+}
+#login-submit {
+    background-color: #c981f6;
 }
