--- a/she_innovates/wwwroot/css/site.css
+++ b/she_innovates/wwwroot/css/site.css
@@ -29,8 +29,8 @@ a {
     color: #bc62f4;
 }
 #registerSubmit {
-    background-color: #c981f6;
+    background-color: #b199b8;
 }
 #login-submit {
-    background-color: #c981f6;
+    background-color: #b199b8;
 }
